--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  margin: 0;
+  padding: 0;
+}
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -17,17 +21,195 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: black;
+  background: white;
+}
+.Border {
+  border: 1px solid #dddddd7a;
+}
+
+.glass {
+  backdrop-filter: blur(5px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(226, 224, 224, 0.811);
+  /* background-color: rgba(16, 25, 38, 0.349); */
+}
+
+.dark {
+  backdrop-filter: blur(5px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(16, 25, 38, 0.349);
+}
+
+.arrow1 {
+  width: 150px;
+  border: 1px solid black;
+  position: relative;
+}
+.arrow2 {
+  width: 150px;
+  border: 1px solid black;
+  position: relative;
+}
+.arrow1::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: black;
+}
+
+.arrow2::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: black;
+}
+
+@keyframes expandArrow {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 150px;
+  }
+}
+
+@keyframes shrinkArrow {
+  0% {
+    width: 150px;
+  }
+  100% {
+    width: 0;
+    display: none;
+  }
+}
+
+.arrow1.animate-expand {
+  animation: expandArrow 1s ease forwards;
+}
+
+.arrow1.animate-shrink {
+  animation: shrinkArrow 1s ease forwards;
+}
+
+.arrow2.animate-expand {
+  animation: expandArrow 1s ease forwards;
+}
+
+.arrow2.animate-shrink {
+  animation: shrinkArrow 1s ease forwards;
+}
+
+li::marker {
+  color: #85dbf2;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.carousel-container {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.carousel {
+  display: flex;
+  height: 100%;
+  width: 100%;
+}
+
+.slide-content {
+  width: 100%;
+  height: 100%;
+}
+
+.slide {
+  flex: 0 0 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  opacity: 1;
+  transition: transform 0.5s ease, opacity 0.5s ease;
+}
+
+.slide-out {
+  opacity: 0;
+  transform: translateX(-100%);
+}
+
+.slide-in {
+  opacity: 0;
+  transform: translateX(100%);
+}
+
+.prev,
+.next {
+  position: absolute;
+  top: 50%;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  z-index: 1;
+  transition: background-color 0.3s ease;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.prev {
+  left: 0;
+}
+
+.next {
+  right: 0;
+}
+
+.dots {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.dot {
+  height: 10px;
+  width: 10px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+.dot-img {
+  inset: 0px;
+  box-sizing: border-box;
+  padding: 0px;
+  border: medium;
+
+  width: 24px;
+  height: 24px;
+  min-width: 24px;
+  max-width: 24px;
+  min-height: 24px;
+  max-height: 24px;
 }
